force-app/main/default/objects/sked_Shadow_Job__c/fields/sked_Shadow_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Shadow_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shadow Drive</label>
    <referenceTo>sked_Shadow_Drive__c</referenceTo>
    <relationshipLabel>Shadow Jobs</relationshipLabel>
    <relationshipName>sked_Shadow_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>