force-app/main/default/objects/sked_Shadow_Job__c/fields/sked_Shadow_Drive_Shift__c.field-meta.xml
<CustomField>
    <fullName>sked_Shadow_Drive_Shift__c</fullName>
    <label>Shadow Drive Shift</label>
    <referenceTo>sked_Shadow_Drive_Shift__c</referenceTo>
    <relationshipLabel>Shadow Jobs</relationshipLabel>
    <relationshipName>sked_Shadow_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>