force-app/main/default/objects/sked_Shadow_Job__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2RBC</fullName>
            </value>
            <value>
                <fullName>2RBC Sign-off</fullName>
            </value>
            <value>
                <fullName>Apheresis</fullName>
            </value>
            <value>
                <fullName>Apheresis Charge</fullName>
            </value>
            <value>
                <fullName>Charge</fullName>
            </value>
            <value>
                <fullName>Charge Mentor</fullName>
            </value>
            <value>
                <fullName>Competent Driver</fullName>
            </value>
            <value>
                <fullName>Drive Lead</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Driver CDL A</fullName>
            </value>
            <value>
                <fullName>Driver CDL B</fullName>
            </value>
            <value>
                <fullName>Driver - DOT</fullName>
            </value>
            <value>
                <fullName>Driver Prestaff</fullName>
            </value>
            <value>
                <fullName>Driver Support</fullName>
            </value>
            <value>
                <fullName>Driver Tech Trainee</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>Lead Donor Ambassador</fullName>
            </value>
            <value>
                <fullName>Licensed Nurse</fullName>
            </value>
            <value>
                <fullName>Limited HH</fullName>
            </value>
            <value>
                <fullName>Limited Ship</fullName>
            </value>
            <value>
                <fullName>NCE Staff</fullName>
            </value>
            <value>
                <fullName>OJI</fullName>
            </value>
            <value>
                <fullName>Pickup Driver</fullName>
            </value>
            <value>
                <fullName>Plasma</fullName>
            </value>
            <value>
                <fullName>Post Collections</fullName>
            </value>
            <value>
                <fullName>Special Collections</fullName>
            </value>
            <value>
                <fullName>Special Collections Charge</fullName>
            </value>
            <value>
                <fullName>Staff Shuttle</fullName>
            </value>
            <value>
                <fullName>Team Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>